2008-04-24  Kouhei Sutou  <kou@cozmixng.org>

	* sample/misc/assistant.rb: cleanup.

2008-04-20  Kouhei Sutou  <kou@cozmixng.org>

	* test/gtk-test-utils.rb: remove assert_boolean because
	TestUnitExt provides it.

2008-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkbuilder.c: GSLIST2ARY_WITH_FREE -> GSLIST2ARY_FREE.

	* test/test_gtk_builder.rb: use only_gtk_version.

	* test/test_gtk_about_dialog.rb: add.

2008-04-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkdisplay.c: implement
	gdk_x11_display_get_startup_notification_id() defined in 2.12.

	* test/test_gdk_display.rb
	(TestGdkDisplay#test_startup_notification_id): add.

	* src/rbgdkwindow.c: implement gdk_window_set_startup_id() defined in
	2.12.

	* test/test_gdk_window.rb (TestGdkWindow#test_set_startup_id): add.

	* src/rbgdkwindow.c: implement gdk_window_set_opacity() defined in
	2.12.

	* test/test_gdk_window.rb (TestGdkWindow#test_set_opacity): add.

	* src/rbgdkpango.c (Init_gtk_gdk_pango): destroy temporary object.

	* src/: use RVAL2GDKCOLOR/GDKCOLOR2RVAL.

	* src/rbgtk.h: add RVAL2GDKCOLOR/GDKCOLOR2RVAL.

	* src/rbgdkpango.c: implement gdk_pango_attr_emboss_color_new()
	defined in 2.12.

	* test/test_gdk_pango.rb: add.

	* src/rbgdk.c: implement gdk_notify_startup_complete_with_id()
	defined in 2.12.

	* test/test_gdk.rb: add.

	* src/rbgdkkeymap.c: implement gdk_keymap_have_bidi_layouts()
	defined in 2.12.

	* test/test_gdk_keymap.rb: add.

	* src/rbgdkevent.c: implement gdk_event_request_motions() defined
	in 2.12.

	* test/test_gdk_event.rb: add.

2008-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: fix rcairo's source path.

	* src/rbgtkbuildable.c: add.

	* test/test_gtk_buildable.rb: add.

	* test/run-test.rb: use GtkTestUtils.

	* test/gtk-test-utils.rb: add.

2008-04-11  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gtk-demo/builder.rb, sample/gtk-demo/demo.ui: add an
	example for Gtk::Builder.

2008-04-10  Kouhei Sutou  <kou@cozmixng.org>
