@@ -2,7 +2,8 @@ require 'tempfile'
 
 module GtkTestUtils
   private
-  def only_gtk_version(major, minor, micro)
+  def only_gtk_version(major, minor, micro=nil)
+    micro ||= 0
     unless Gtk.check_version?(major, minor, micro)
       omit("Require GTK+ >= #{major}.#{minor}.#{micro}")
     end
